--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>林航羽-主页</title>
+    <title>林航羽-主站</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -86,7 +86,7 @@
             <div class="column large-full">
 
                 <h1>
-                林航羽 - 主页:  <br>
+                林航羽 - 主站:  <br>
                 Personal Website
                 </h1>
 
@@ -691,7 +691,9 @@
         <div class="row s-footer__bottom">
             <div class="column large-full ss-copyright">
                 <span>©版权所有 2022-2024</span> 
-                <span>改良制作：<a href="https://lhy.g6i.cn/">林航羽</a></span>
+                <span>改良制作：<a href="https://lhy.g6i.cn/">林航羽 </a>
+<span></span>备份：
+<a href="https://lhy2.sx7.top/">备份1站</a></span>
             </div> <!-- end ss-copyright -->
 
             <div class="ss-go-top">
